@@ -45,7 +45,7 @@
 				AdditionalIncludeDirectories="..\..\..\extlibs\JasPer\src\libjasper\include"
 				PreprocessorDefinitions="NDEBUG;WIN32;_LIB;JAS_WIN_MSVC_BUILD"
 				StringPooling="true"
-				RuntimeLibrary="2"
+				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
 				PrecompiledHeaderFile=".\libjasper___Win32_Release/libjasper.pch"
 				AssemblerListingLocation=".\libjasper___Win32_Release/"
